--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
     <link href="./styles/output.css" rel="stylesheet" />
 
     <title>Cardapio Dev!</title>
@@ -16,7 +25,47 @@
           class="w-32 h-32 rounded-full shadow-lg hover:scale-110 duration-200"
         />
         <h1 class="text-4xl mt-4 mb-2 font-bold text-white">Devlima Burguer</h1>
+        <span class="text-white font-medium">
+          Av. Joaquim Tavora, 399, Cruzeiro do Sul - AC
+        </span>
+
+        <div class="bg-green-600 px-4 py-1 rounded-lg mt-5" id="date-span">
+          <span class="text-white font-medium">Seg á Dom - 17:00 as 23:00</span>
+        </div>
       </div>
     </header>
+
+    <h2 class="text-2xl md:text-3xl font-bold text-center mt-9 mb-6">
+      Conheça nosso cardapio
+    </h2>
+
+    <div id="menu">
+      <main class="grid grid-cols-1">
+        <div class="flex gap-2">
+          <img
+            src="assets/hamb-1.png"
+            alt="hamburguer simples"
+            class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
+          />
+          <div>
+            <p class="font-bold">Hamburguer simples</p>
+            <p class="text-sm">
+              Pão, Carne bovina moída ou picada, Queijo, Batata palha, Molho,
+              Cebola caramelizada, Salada fresca, Picles, Ketchup, Mostarda.
+            </p>
+            <div class="flex items-center gap-2 justify-between mt-3">
+              <p class="font-bold text-lg">R$:18.00</p>
+              <button
+                class="bg-gray-900 px-5 rounded add-to-cart-btn"
+                data-name="hamburguer simples"
+                data-price="18.00"
+              >
+                <i class="fa fa-cart-plus text-lg text-white"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+      </main>
+    </div>
   </body>
 </html>
