--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
     </h2>
 
     <div id="menu">
-      <main class="grid grid-cols-1">
+      <main
+        class="grid grid-cols-1 md:grid-cols-2 gap-7 md:gap-10 mx-auto max-w-7xl mb-16 px-2"
+      >
         <div class="flex gap-2">
           <img
             src="assets/hamb-1.png"
@@ -59,6 +61,81 @@
                 class="bg-gray-900 px-5 rounded add-to-cart-btn"
                 data-name="hamburguer simples"
                 data-price="18.00"
+              >
+                <i class="fa fa-cart-plus text-lg text-white"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex gap-2">
+          <img
+            src="assets/hamb-2.png"
+            alt="hamburguer duplo"
+            class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
+          />
+          <div>
+            <p class="font-bold">Hamburguer Duplo</p>
+            <p class="text-sm">
+              Pão, Carne bovina moída ou picada, Queijo, Batata palha, Molho,
+              Cebola caramelizada, Salada fresca, Picles, Ketchup, Mostarda.
+            </p>
+            <div class="flex items-center gap-2 justify-between mt-3">
+              <p class="font-bold text-lg">R$:26.00</p>
+              <button
+                class="bg-gray-900 px-5 rounded add-to-cart-btn"
+                data-name="hamburguer duplo"
+                data-price="26.00"
+              >
+                <i class="fa fa-cart-plus text-lg text-white"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex gap-2">
+          <img
+            src="assets/hamb-3.png"
+            alt="hamburguer da casa"
+            class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
+          />
+          <div>
+            <p class="font-bold">Hamburguer da Casa</p>
+            <p class="text-sm">
+              Pão, Carne bovina moída ou picada, Queijo, Batata palha, Molho,
+              Cebola caramelizada, Salada fresca, Picles, Ketchup, Mostarda.
+            </p>
+            <div class="flex items-center gap-2 justify-between mt-3">
+              <p class="font-bold text-lg">R$:28.00</p>
+              <button
+                class="bg-gray-900 px-5 rounded add-to-cart-btn"
+                data-name="hamburguer da casa"
+                data-price="28.00"
+              >
+                <i class="fa fa-cart-plus text-lg text-white"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex gap-2">
+          <img
+            src="assets/hamb-4.png"
+            alt="hamburguer duplo"
+            class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
+          />
+          <div>
+            <p class="font-bold">Hamburguer Salada</p>
+            <p class="text-sm">
+              Pão, Carne bovina moída ou picada, Queijo, Batata palha, Molho,
+              Cebola caramelizada, Salada fresca, Picles, Ketchup, Mostarda.
+            </p>
+            <div class="flex items-center gap-2 justify-between mt-3">
+              <p class="font-bold text-lg">R$:23.00</p>
+              <button
+                class="bg-gray-900 px-5 rounded add-to-cart-btn"
+                data-name="hamburguer salada"
+                data-price="23.00"
               >
                 <i class="fa fa-cart-plus text-lg text-white"></i>
               </button>
