grid menu drinks

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       Conheça nosso cardapio
     </h2>
 
+    <!-- Seção Menu -->
     <div id="menu">
       <main
         class="grid grid-cols-1 md:grid-cols-2 gap-7 md:gap-10 mx-auto max-w-7xl mb-16 px-2"
@@ -67,7 +68,6 @@
             </div>
           </div>
         </div>
-
         <div class="flex gap-2">
           <img
             src="assets/hamb-2.png"
@@ -84,7 +84,7 @@
               <p class="font-bold text-lg">R$:26.00</p>
               <button
                 class="bg-gray-900 px-5 rounded add-to-cart-btn"
-                data-name="hamburguer duplo"
+                data-name="Hamburguer Duplo"
                 data-price="26.00"
               >
                 <i class="fa fa-cart-plus text-lg text-white"></i>
@@ -92,7 +92,6 @@
             </div>
           </div>
         </div>
-
         <div class="flex gap-2">
           <img
             src="assets/hamb-3.png"
@@ -106,22 +105,21 @@
               Cebola caramelizada, Salada fresca, Picles, Ketchup, Mostarda.
             </p>
             <div class="flex items-center gap-2 justify-between mt-3">
-              <p class="font-bold text-lg">R$:28.00</p>
+              <p class="font-bold text-lg">R$:23.00</p>
               <button
                 class="bg-gray-900 px-5 rounded add-to-cart-btn"
-                data-name="hamburguer da casa"
-                data-price="28.00"
+                data-name="Hamburguer da Casa"
+                data-price="23.00"
               >
                 <i class="fa fa-cart-plus text-lg text-white"></i>
               </button>
             </div>
           </div>
         </div>
-
         <div class="flex gap-2">
           <img
             src="assets/hamb-4.png"
-            alt="hamburguer duplo"
+            alt="hamburguer salada"
             class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
           />
           <div>
@@ -131,11 +129,11 @@
               Cebola caramelizada, Salada fresca, Picles, Ketchup, Mostarda.
             </p>
             <div class="flex items-center gap-2 justify-between mt-3">
-              <p class="font-bold text-lg">R$:23.00</p>
+              <p class="font-bold text-lg">R$:16.00</p>
               <button
                 class="bg-gray-900 px-5 rounded add-to-cart-btn"
-                data-name="hamburguer salada"
-                data-price="23.00"
+                data-name="Hamburguer Salada"
+                data-price="16.00"
               >
                 <i class="fa fa-cart-plus text-lg text-white"></i>
               </button>
@@ -144,5 +142,60 @@
         </div>
       </main>
     </div>
+
+    <!-- Seção Bebidas -->
+    <div class="mx-auto max-w-7xl px-2 my-2">
+      <h2 class="font-bold text-3xl">Bebidas</h2>
+    </div>
+
+    <!-- Início da grid de bebidas -->
+    <div
+      class="grid grid-cols-1 md:grid-cols-2 gap-7 md:gap-10 mx-auto max-w-7xl mb-16 px-2"
+      id="menu"
+    >
+      <div class="flex gap-2">
+        <img
+          src="assets/refri-1.png"
+          alt="coca cola lata"
+          class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
+        />
+        <div>
+          <p class="font-bold">Coca Lata</p>
+
+          <div class="flex items-center gap-2 justify-between mt-3">
+            <p class="font-bold text-lg">R$:6.00</p>
+            <button
+              class="bg-gray-900 px-5 rounded add-to-cart-btn"
+              data-name="Coca Lata"
+              data-price="6.00"
+            >
+              <i class="fa fa-cart-plus text-lg text-white"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="flex gap-2">
+        <img
+          src="assets/refri-2.png"
+          alt="Guaraná lata"
+          class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
+        />
+        <div>
+          <p class="font-bold">Guaraná lata</p>
+
+          <div class="flex items-center gap-2 justify-between mt-3">
+            <p class="font-bold text-lg">R$:6.00</p>
+            <button
+              class="bg-gray-900 px-5 rounded add-to-cart-btn"
+              data-name="Guaraná Lata"
+              data-price="6.00"
+            >
+              <i class="fa fa-cart-plus text-lg text-white"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Fim da grid de bebidas -->
   </body>
 </html>
