--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -197,5 +204,52 @@
       </div>
     </div>
     <!-- Fim da grid de bebidas -->
+
+    <!--Modal cart-->
+    <div
+      class="bg-black/50 w-full h-full fixed top-0 left-0 z-[99] hidden items-center justify-center"
+    >
+      <div class="bg-white p-5 rounded-md min-w-[90%] md:min-w-[600px]">
+        <h2 class="font-bold text-center mb-2 text-3xl">Meu carrinho</h2>
+
+        <div id="cart-itens" class="flex justify-between mb-2 flex-col"></div>
+
+        <p class="font-bold"><span id="cart-total">Total R$:0.00</span></p>
+
+        <p class="font-bold mt-4">Endereço de entrega:</p>
+        <input
+          type="text"
+          id="addres"
+          class="w-full border-2 p-1 rounded my-1"
+          placeholder="Digite seu endereço completo"
+        />
+        <p id="addres-warn" class="text-red-500 hidden">
+          Digite seu endereço completo!
+        </p>
+
+        <div class="flex items-center justify-between mt-5 w-full">
+          <button id="close-modal-btn">Fechar</button>
+          <button
+            id="checkout-btn"
+            class="bg-green-500 text-white py-1 px-4 rounded"
+          >
+            Finalizar Pedido
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <!--- cart button-->
+    <footer
+      class="w-full bg-red-500 py-3 fixed bottom-0 z-40 flex items-center justify-center"
+    >
+      <button
+        class="flex items-center text-white font-bold gap-2"
+        id="cart-btn"
+      >
+        (<span id="cart-count">2</span>) Veja meu carrinho
+        <i class="fa fa-cart-plus text-lg text-white"></i>
+      </button>
+    </footer>
   </body>
 </html>
