--- a/index.html
+++ b/index.html
@@ -251,5 +251,7 @@
         <i class="fa fa-cart-plus text-lg text-white"></i>
       </button>
     </footer>
+
+    <script src="script.js"></script>
   </body>
 </html>
